--- a/package.json
+++ b/package.json
@@ -1,55 +1,43 @@
 {
-  "name": "cmbjs",
-  "version": "1.1.0",
-  "license": "MIT",
+  "name": "cmb",
+  "version": "2.0.0",
+  "description": "A parser generator using parser combinators",
+  "private": true,
+  "scripts": {
+    "build": "webpack",
+    "flow": "flow",
+    "prepublish": "npm run build",
+    "test": "jasmine"
+  },
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcvoid/cmbjs.git"
+    "url": "git+https://github.com/mcvoid/cmbjs.git"
   },
-  "author": {
-    "name": "Sean Wolcott",
-    "email": "mcvoid@mcvoid.org",
-    "url": "http://mcvoid.github.io"
+  "keywords": [
+    "parser",
+    "generator",
+    "combinators"
+  ],
+  "author": "Sean Wolcott",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mcvoid/cmbjs/issues"
+  },
+  "homepage": "https://github.com/mcvoid/cmbjs#readme",
+  "dependencies": {
   },
   "devDependencies": {
-    "jasmine": "^2.3.2",
-    "jshint": "*"
-  },
-  "scripts": {
-    "test": "jasmine JASMINE_CONFIG_PATH=jasmine-config.json",
-    "lint": "jshint cmb.js test/*.js"
-  },
-  "main": "cmb.js",
-  "bugs": "https://github.com/mcvoid/cmbjs/issues",
-  "jshintConfig": {
-    "bitwise": true,
-    "camelcase": true,
-    "curly": true,
-    "eqeqeq": true,
-    "forin": true,
-    "freeze": true,
-    "immed": true,
-    "indent": 2,
-    "latedef": true,
-    "newcap": true,
-    "noarg": true,
-    "noempty": true,
-    "nonbsp": true,
-    "nonew": true,
-    "plusplus": false,
-    "quotmark": true,
-    "undef": true,
-    "unused": true,
-    "maxparams": false,
-    "maxdepth": false,
-    "maxstatements": false,
-    "maxcomplexity": false,
-    "maxlen": false,
-    "varstmt": false,
-    "esnext": true,
-    "sub": true,
-    "validthis": true,
-    "jasmine": true,
-    "node": true
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "flow-bin": "^0.84.0",
+    "jasmine": "^3.3.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   }
 }
